//
// Protocol buffers definition for an example server
//

syntax = "proto3";

package pt.tecnico.example;

option java_multiple_files = true;


message GetNameRequest {
}

message NameResponse {
	string name = 1;
}

message SetNameRequest {
	string proposedName = 1;
}


service ExampleService {
	rpc get_name (GetNameRequest) returns (NameResponse);
	rpc set_name (SetNameRequest) returns (NameResponse);
}
